syntax = "proto3";

package borsch;

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "net.crazyproger.borsch.rpc.player";
option java_outer_classname = "PlayerProto";

service ProfileCreateService {
  rpc Create (google.protobuf.Empty) returns (CreateResponse) {}
}

service PlayerService {
  rpc Info (google.protobuf.Empty) returns (ShortInfo) {}
  rpc Rename (RenameRequest) returns (RenameResponse) {}
}

message CreateResponse {
  ShortInfo info = 1;
  string secret = 2;
}

message ShortInfo {
  int32 id = 1;
  string name = 2;
  int32 money = 3;
}

message RenameRequest {
  string name = 1;
}

message RenameResponse {
  ShortInfo info = 1;
  enum Error {
    UNKNOWN = 0;
    DUPLICATE_NAME = 1;
    RESTRICTED = 2;
  }
  Error error = 2; // TODO find better way to notify about error
}